# RAG-Optimization-System

./: .gitignore  README.md  filepath.json  pyproject.toml  requirements.txt
frontend/: app.py
frontend/persist_directory_for_smaller_chunck_vector_db/: chroma.sqlite3
large_vector_db/fb467b57-9c4d-43a1-8bfe-0386a9d96f57/: index_metadata.pickle
notebooks/: chunking.ipynb  data_overview.ipynb  embeddings.ipynb  multiquery_evaluation.ipynb  rag_fusion_evaluation.ipynb  simple_rag_evaluation.ipynb
scripts/: evaluation.py  file_loader.py  generate_syntetic_test_data.py  generate_vector_stores.py  load_data.py  pipelines.py
semantic_vector_db/: chroma.sqlite3
semantic_vector_db/c734ddf8-b3f6-4e74-bbda-6478ee95acf2/: index_metadata.pickle
tests/: unit_test.py
